--- a/INDEShippingCalculator/Views/_ViewImports.cshtml
+++ b/INDEShippingCalculator/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using INDEShippingCalculator
-@using INDEShippingCalculator.Models
+﻿@using INDEShipping
+@using INDEShipping.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
