--- a/INDEShippingCalculator/Views/Offers/Index.cshtml
+++ b/INDEShippingCalculator/Views/Offers/Index.cshtml
@@ -38,4 +38,7 @@
     </tbody>
 </table>
 
-<a asp-action="Create" class="btn btn-primary">Create New</a>
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Calculate" class="btn btn-secondary">Calculate Shipping Cost</a>
+</p>
