--- a/INDEShippingCalculator/Views/TransportCompany/Create.cshtml
+++ b/INDEShippingCalculator/Views/TransportCompany/Create.cshtml
@@ -43,7 +43,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="OfferType" class="control-label"></label>
-                <input asp-for="OfferType" class="form-control" />
+                <select asp-for="OfferType" class="form-control">
+                    <option value="Weight">Προσφορές με κιλό</option>
+                    <option value="Cubic">Προσφορές με κυβικό</option>
+                </select>
                 <span asp-validation-for="OfferType" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -56,3 +59,9 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
