--- a/INDEShippingCalculator/Views/PostalCodes/UploadXml.cshtml
+++ b/INDEShippingCalculator/Views/PostalCodes/UploadXml.cshtml
@@ -8,14 +8,8 @@
 
 <form asp-action="UploadXml" method="post" enctype="multipart/form-data">
     <div class="form-group">
-        <label for="file">Upload XML file</label>
-        <input type="file" name="file" class="form-control" />
+        <label for="xmlFile">Upload XML File</label>
+        <input type="file" class="form-control" name="xmlFile" />
     </div>
-    <div class="form-group">
-        <input type="submit" value="Upload" class="btn btn-primary" />
-    </div>
+    <button type="submit" class="btn btn-primary">Upload</button>
 </form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
