--- a/INDEShippingCalculator/Views/TransportCompany/Index.cshtml
+++ b/INDEShippingCalculator/Views/TransportCompany/Index.cshtml
@@ -41,3 +41,4 @@
 </table>
 
 <a asp-action="Create" class="btn btn-primary">Create New</a>
+<a asp-action="UploadXml" class="btn btn-secondary">Upload XML</a>
